Move account-listing role logic into the controller; keep service generic
AccountService no longer looks up the user or branches on role. listAccounts
takes an optional customerId (null = all); a new listAccountsOwnedBy covers the
self-scoped case via findByCustomerUsername. The controller decides which to
call based on the caller's role, so the service stays generic data retrieval.

The role detection lives in a TEMP isEmployee helper, to be replaced by a
custom UserPrincipal once the auth module exposes it.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>